Fix horizontal scroll

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -43,7 +43,7 @@ main {
             top: 9%;
             left: 2%;
             @media (min-width: $breakpoint-mobile) {
-                left: 2%;
+                left: 4%;
             }
             @media (min-width: $breakpoint-tablet) {
                 left: 2%;
